--- a/src/features/common/components/Layout/Layout.css
+++ b/src/features/common/components/Layout/Layout.css
@@ -1,13 +1,7 @@
 .Layout {
-  text-align: center;
+  height: 100%;
 }
 
-.Layout-header {
-  background-color: #222;
-  padding: 20px;
-  color: white;
-}
-
-.Layout-intro {
-  font-size: large;
+.Layout .section {
+  background-color: transparent;
 }
