--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,9 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+html, body, #root {
+  background-image: url('/bg.jpg');
+  overflow: auto;
+  height: 100%;
+}
