--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
 }
 
 html, body, #root {
-  background-image: url('/bg.jpg');
+  background-image: url('../public/bg.jpg');
   overflow: auto;
   height: 100%;
 }
